; ModuleID = '/home/carl/AnghaBench/sqlcipher/src/extr_build.c_sqlite3FindDb.c'
source_filename = "/home/carl/AnghaBench/sqlcipher/src/extr_build.c_sqlite3FindDb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @sqlite3FindDb(i32* %0, i32* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  store i32* %0, i32** %3, align 8
  store i32* %1, i32** %4, align 8
  %7 = load i32*, i32** %3, align 8
  %8 = load i32*, i32** %4, align 8
  %9 = call i8* @sqlite3NameFromToken(i32* %7, i32* %8)
  store i8* %9, i8** %6, align 8
  %10 = load i32*, i32** %3, align 8
  %11 = load i8*, i8** %6, align 8
  %12 = call i32 @sqlite3FindDbName(i32* %10, i8* %11)
  store i32 %12, i32* %5, align 4
  %13 = load i32*, i32** %3, align 8
  %14 = load i8*, i8** %6, align 8
  %15 = call i32 @sqlite3DbFree(i32* %13, i8* %14)
  %16 = load i32, i32* %5, align 4
  ret i32 %16
}

declare dso_local i8* @sqlite3NameFromToken(i32*, i32*) #1

declare dso_local i32 @sqlite3FindDbName(i32*, i8*) #1

declare dso_local i32 @sqlite3DbFree(i32*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
